gateway/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: gateway
spec:
  parentRefs:
    - name: home
      sectionName: http
  hostnames:
    - "argocd.smoothz.lan"
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
