gateway/httproute-openobserve.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openobserve
  namespace: gateway
spec:
  parentRefs:
    - name: home
      sectionName: http
  hostnames:
    - "openobserve.smoothz.lan"
  rules:
    - backendRefs:
        - name: openobserve
          namespace: openobserve
          port: 5080
