gateway/tlsroute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: argocd
  namespace: gateway
spec:
  parentRefs:
    - name: home
      sectionName: https
  hostnames:
    - "argocd.smoothz.lan"
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 443
